created basic skeleton

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <!-- <meta http-equiv="X-UA-Compatible" content="IE=edge"> -->
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
@@ -9,6 +10,37 @@
   <title>Frontend Mentor | Dictionary web app</title>
 </head>
 <body>
+  <div class="container">
+    <header>
+
+    </header>
+    <main>
+      <input type="search" name="search" id="search">
+      <h1>Definition word</h1>
+      <svg xmlns="http://www.w3.org/2000/svg" width="75" height="75" viewBox="0 0 75 75"><g fill="#A445ED" fill-rule="evenodd"><circle cx="37.5" cy="37.5" r="37.5" opacity=".25"/><path d="M29 27v21l21-10.5z"/></g></svg>
+      <p>/ˈkiːbɔːd/</p>
+      <p>noun</p>
+      <hr>
+      <p>meaning</p>
+      <ul>
+        <li>definition</li>
+        <li>definition</li>
+        <li>definition</li>
+      </ul>
+      <p>synonyms</p>
+      <p>electronic keyboard</p>
+      <p>verb</p>
+      <hr>
+      <p>meaning</p>
+      <ul>
+        <li>definition</li>
+        <li>example</li>
+      </ul>
+
+      <hr>
+      <p>source</p>
+    </main>
+  </div>
 <script src="app.js"></script>
 </body>
 </html>
