--- a/index.html
+++ b/index.html
@@ -38,30 +38,48 @@
     </header>
     <main>
       <input type="search" name="search" id="search">
-      <h1>Definition word</h1>
-      <svg xmlns="http://www.w3.org/2000/svg" width="75" height="75" viewBox="0 0 75 75"><g fill="#A445ED" fill-rule="evenodd"><circle cx="37.5" cy="37.5" r="37.5" opacity=".25"/><path d="M29 27v21l21-10.5z"/></g></svg>
-      <p>/ˈkiːbɔːd/</p>
-      <p>noun</p>
-      <hr>
-      <p>meaning</p>
+      <div class="word-container">
+        <div class="word">
+          <h1>keyboard</h1>
+          <p>/ˈkiːbɔːd/</p>
+        </div>
+        <svg xmlns="http://www.w3.org/2000/svg" width="75" height="75" viewBox="0 0 75 75"><g fill="#A445ED" fill-rule="evenodd"><circle cx="37.5" cy="37.5" r="37.5" opacity=".25"/><path d="M29 27v21l21-10.5z"/></g></svg>
+      </div>
+    </main>
+    <section>
+      <div class="hr-container">
+        <p>noun</p>
+        <hr>
+      </div>
+      <p class="meaning">Meaning</p>
       <ul>
-        <li>definition</li>
-        <li>definition</li>
-        <li>definition</li>
+        <li>(etc.) A set of keys used to operate a typewriter, computer etc.</li>
+        <li>A component of many instruments including the piano, organ, and harpsichord consisting of usually black and white keys that cause different tones to be produced when struck.</li>
+        <li>A device with keys of a musical keyboard, used to control electronic sound-producing devices which may be built into or separate from the keyboard device.</li>
       </ul>
-      <p>synonyms</p>
-      <p>electronic keyboard</p>
-      <p>verb</p>
-      <hr>
-      <p>meaning</p>
+
+      <div class="synonyms-container">
+        <p>Synonyms</p>
+        <p>electronic keyboard</p>
+      </div>
+    </section>
+      
+    <section>
+      <div class="hr-container">
+        <p>verb</p>
+        <hr>
+      </div>
+      <p class="meaning">Meaning</p>
       <ul>
         <li>definition</li>
         <li>example</li>
       </ul>
-
+    </section>
+    
+    <footer>
       <hr>
       <p>source</p>
-    </main>
+    </footer>
   </div>
 <script src="app.js"></script>
 </body>
