--- a/index.html
+++ b/index.html
@@ -71,14 +71,18 @@
       </div>
       <p class="meaning">Meaning</p>
       <ul>
-        <li>definition</li>
-        <li>example</li>
+        <li>To type on a computer keyboard.</li>
       </ul>
+      <p class="example">“Keyboarding is the part of this job I hate the most.”</p>
     </section>
     
     <footer>
       <hr>
-      <p>source</p>
+      <p>Source</p>
+      <div class="link-container">
+        <a href="#">https://en.wiktionary.org/wiki/keyboard</a>
+        <svg xmlns="http://www.w3.org/2000/svg" width="14" height="14" viewBox="0 0 14 14"><path fill="none" stroke="#838383" stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5" d="M6.09 3.545H2.456A1.455 1.455 0 0 0 1 5v6.545A1.455 1.455 0 0 0 2.455 13H9a1.455 1.455 0 0 0 1.455-1.455V7.91m-5.091.727 7.272-7.272m0 0H9m3.636 0V5"/></svg>
+      </div>
     </footer>
   </div>
 <script src="app.js"></script>
