--- a/index.html
+++ b/index.html
@@ -20,7 +20,11 @@
         <div class="dropdown-container">
           <p>Sans Serif</p>
           <svg xmlns="http://www.w3.org/2000/svg" width="14" height="8" viewBox="0 0 14 8"><path fill="none" stroke="#A445ED" stroke-width="1.5" d="m1 1 6 6 6-6"/></svg>
-  
+          <div class="font-container">
+            <div class="font"><p>Sans Serif</p></div>
+            <div class="font"><p>Serif</p></div>
+            <div class="font"><p>Mono</p></div>
+          </div>
         </div>
 
         <div class="divider"></div>
