--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <title>Frontend Mentor | Dictionary web app</title>
 </head>
 <body class="dark-mode">
-  <div class="body-container">
+  <div id="body-container" class="sans-serif">
     <header>
       <svg xmlns="http://www.w3.org/2000/svg" width="34" height="38" viewBox="0 0 34 38"><g fill="none" fill-rule="evenodd" stroke="#838383" stroke-linecap="round" stroke-width="1.5"><path d="M1 33V5a4 4 0 0 1 4-4h26.8A1.2 1.2 0 0 1 33 2.2v26.228M5 29h28M5 37h28"/><path stroke-linejoin="round" d="M5 37a4 4 0 1 1 0-8"/><path d="M11 9h12"/></g></svg>
 
@@ -21,9 +21,9 @@
           <p>Sans Serif</p>
           <svg xmlns="http://www.w3.org/2000/svg" width="14" height="8" viewBox="0 0 14 8"><path fill="none" stroke="#A445ED" stroke-width="1.5" d="m1 1 6 6 6-6"/></svg>
           <div class="font-container hide">
-            <div class="font"><p>Sans Serif</p></div>
-            <div class="font"><p>Serif</p></div>
-            <div class="font"><p>Mono</p></div>
+            <div class="font"><p class="sans-serif">Sans Serif</p></div>
+            <div class="font"><p class="serif">Serif</p></div>
+            <div class="font"><p class="mono">Mono</p></div>
           </div>
         </div>
 
