--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
 
     <div class="input-container">
       <input type="search" name="search" id="search" placeholder="Search for any word…">
+      <span class="hide">Whoops, can’t be empty…</span>
       <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 18 18"><path fill="none" stroke="#A445ED" stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5" d="m12.663 12.663 3.887 3.887M1 7.664a6.665 6.665 0 1 0 13.33 0 6.665 6.665 0 0 0-13.33 0Z"/></svg>
     </div>
 
