--- a/index.html
+++ b/index.html
@@ -94,6 +94,14 @@
         </div>
       </footer>
     </div>
+
+    <div id="whoops-container" class="hide">
+      <div>
+        😕
+      </div>
+      <h3>No Definitions Found</h3>
+      <p>Sorry pal, we couldn't find definitions for the word you were looking for. You can try the search again at later time or head to the web instead.</p>
+    </div>
   </div>
 <script src="app.js"></script>
 </body>
